Prevent not centered .intro

--- a/www/sass/structure.scss
+++ b/www/sass/structure.scss
@@ -140,7 +140,7 @@ input {outline: none;}
 	font-weight: 100;
 	font-style: italic;
 	line-height: 1.4em;
-	margin-bottom: 25px;
+	margin: 0 auto 25px auto;
 }
 
 .intro > strong {font-weight: 300;}
